--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2,3 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 300ms;
+}
+.fade-enter-to {
+  opacity: 1;
+}
